--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OligoQHSE!</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="icon" href="/src/images/logo1.ico" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
   </head>
